--- a/clean_architecture/2. 프로그래밍 패러다임.md
+++ b/clean_architecture/2. 프로그래밍 패러다임.md
@@ -183,3 +183,73 @@ ex) 업무 규칙이 DB와 UI에 의존하는 대신에, 시스템의 소스 코
 ㅇㅇ를 사용하면 아키텍트는 플러그인 아키텍처를 구성할 수 있고 이를 통해 고수준의 정책을 포함하는 모델은 저수준의 세부사항을 포함하는 모듈에 대해 독립성 모장 가능.
 
 저수준의 세부사항은 중요도가 낮은 프러그인 모듈로 만들 수 있고, 고수준의 정책을 포함하는 모듈과는 독립적으로 개발하고 배포할수 있다.
+
+<br>
+
+### ㅁ 함수형 프로그래밍
+
+: 이 패러다임에서 핵심이 되는 기반은 람다(lambda) 계산법으로 알론조 처치(Alonzo Church)가 1930년대에 발명
+
+함수형 언어에서는 변수는 변경되지 않는다.
+
+아키텍트는 왜 변수의 가변셩을 염려하는 이유는? 경합(race)조건, 교착상태(deadlock)조건, 동시 업데이트(concurrent update) 문제가 모두 가변 변수로 인해 발생하기 때문.
+
+아키텍트라면 동시성(concurrency) 문제에 지대한 관심을 가져야만 한다.
+
+불변성이 가능할려면 저장 공간이 무한하고 프로세서의 속도가 무한히 빠르다는 전제하에 가능, 즉 일종의 타협이 필요
+
+<br>
+
+- 가변성 분리
+
+: 불변성과 관련하여 가장 주요한 타협 중 하나는 애플리케이션 또는 애플리케이션 내부의 서비스를 가변 컴포넌트와 불변 컴포넌트로 분리하는 일이다.
+
+불변 컴포넌트에서는 순수하게 함수형 방식으로만 작업이 처리되며, 어떤 가변 변수도 사용되지 않는다.
+
+불변 컴포넌트는 변수의 상태를 변경할수 있는, 즉 숙수 함수형 컴포넌트가 아닌 하나 이상의 다른 컴포넌트와 서로 통신한다.
+
+상태 변경은 컴포넌트를 갖가지 동시성 문제에 노출하는 꼴이므로, 흔히 트랜잭션 메모리(transactional memory)와 같은 실천법을 사용하여 동시 업데이트와 경합 조건 문제로부터 가변 변수를 보호한다.
+
+트랜잭션 메모리는 데이터베이스가 디스크의 레코드를 다루는 방식과 동일한 방식으로 메모리의 변수를 처리한다.
+
+즉, 트랜잭션을 사용하거나 또는 재시도 기법을 통해 이들 변수를 보호한다.
+
+하지만 이러한 방식으로는 여러 변수가 상호 의존하는 상황에서는 동시 업데이트와 교착상태 문제로부터 환벽히 보호 불가능.
+
+애플리케이션을 제대로 구조화하려면 변수를 변경하는 컴포넌트와 변경하지 않는 컴포넌트를 분리해야한다.
+
+그리고 이렇게 분리하려면 가변 변수들은 보호하는 적절한 수단을 동원해 뒷받침해야 한다.
+
+가능한 많은 처리를 불변 컴포넌트로 옮겨야하고, 가변 컴포넌트는 가능한 코드에서 뺴내야 한다.
+
+<br>
+
+- 이벤트 소싱
+
+: 저장 공간과 처리 능력은 점점 좋아지고, 필요한 가변 상태는 더 적어진다.
+
+이벤트 소싱은 상태가 아닌 트랜잭션을 저장하자는 전략이다.
+
+상태가 필요해지면 단순히 상태의 시작점부터 모든 트랜잭션을 처리한다.
+
+저장 고간이 많이 필요하지만, 데이터 저장소에서 삭제되거나 변경되는 것이 하나도 없다는 사실이다.
+
+결과적으로 애플리케이션은 CRUD가 아니라 그저  CR 만 수행한다.
+
+또한 데이터 저장소에서 변경과 삭제가 전혀 발생하지 않으므로 동시 업데이트 문제도 일어나지 않는다.
+
+저장 공간과 처리 능력이 충분하면 애플리케이션이 완전한 불변성을 갖도록 만들 수 있고, 따라서 완전한 함수형으로 만들 수 있다.
+
+<br>
+
+위 3개의 패러다임은 우리가 코드를 작성하는 방식의 형태를 한정시킨다.
+
+어떤 패러다임도 우리의 권한이나 능력에 무언가를 보태지 않고 한정만 시키고 있다.
+
+즉, 소프트웨어는 발전하는 기술이 아니라는 것이다.
+
+소프트웨어는 최초의 코드를 작성할 때 사용한 규칙과 지금의 규칙은 조금도 다르지 않다.
+
+소프트 웨어의 핵심은 여전히 그대로 이다.
+
+소프트웨어, 즉 컴퓨터 프로그램은 순차(sequence), 분기(selection), 반복(iteration), 참초(indirection)로 구성 된다.
