--- a/clean_architecture/2. 프로그래밍 패러다임.md
+++ b/clean_architecture/2. 프로그래밍 패러다임.md
@@ -1,6 +1,7 @@
 - [ㅁ 패러다임의 개요](#ㅁ-패러다임의-개요)
-- [ㅁ 구조적 프로그래밍)](#ㅁ-구조적-프로그래밍)
-
+- [ㅁ 구조적 프로그래밍](#ㅁ-구조적-프로그래밍)
+- [ㅁ 객체 지향 프로그래밍](#ㅁ-객체-지향-프로그래밍)
+- [ㅁ 함수형 프로그래밍](#ㅁ-함수형-프로그래밍)
 ---
 
 ### ㅁ 패러다임의 개요
